WTF, brain? Use correct namespacing.

--- a/sass/site/primary/_frontpage.scss
+++ b/sass/site/primary/_frontpage.scss
@@ -1,6 +1,6 @@
 .flare-frontpage-widget {
 
-  .libretto-short-post {
+  .flare-short-post {
     img {
       border-radius: 50%;
       float: left;
